tests/baselines/reference/parserStrictMode15-negative.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.ts (2 errors) ====
    "use strict";
    delete a[b];
           ~
!!! error TS2304: Cannot find name 'a'.
             ~
!!! error TS2304: Cannot find name 'b'.